# automated-lit-reviews

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
litreview/: audit.py  cli.py  config.py  db.py  download.py  extract.py  ingest.py  models.py  recommend.py  screen.py  synthesize.py  traverse.py
optimizations/screening-batch/: benchmark_batch_screening.py  results.md
optimizations/screening/tournament/: RESULTS.md  candidate_test_set.json  ground_truth.json  metrics.py  run_tournament.py  sampler.py  wrapper.py
optimizations/screening/tournament/prompts/: v1_baseline.txt  v2_include_by_default.txt  v3_language_primary_gate.txt
optimizations/screening/tournament/results/: leaderboard.json  round_1_gemini-flash.json  round_1_groq-llama4scout.json  round_1_groq-llama70b.json  round_1_groq-llama8b.json  round_1_results.json  round_2_gemini-flash-v2.json  round_2_groq-llama4scout-v2.json  round_2_groq-llama70b-v2.json  round_2_results.json  round_3_gemini-flash-v3.json  round_3_groq-llama4scout-v3.json  round_3_groq-llama70b-v3.json  round_3_results.json
optimizations/screening/tournament/rounds/: round_1.toml  round_2.toml  round_3.toml
projects/geometry-testing-simplicial-complexes/: chat_papers.txt  comparison_report.txt  literature-review.md  project.toml
projects/language-robotic-control/: literature_review_cosmo.md  project.toml
projects/self-supervised-pretraining/: project.toml
scripts/: compare_screeners.py  compare_with_chat.py  ingest_seeds.py
supabase/: schema.sql
